# adwlauncher

./: Cargo.toml  README.md  install.fish
src/: app_discovery.rs  cache.rs  error.rs  icon.rs  main.rs  style.css  types.rs  usage.rs
