[package]
name = "adwlauncher"
version = "0.2.0"
edition = "2024"

[dependencies]
gtk4-layer-shell = "0.7"
freedesktop-desktop-entry = "0.8"
niri-ipc = "25.11.0"
relm4 = { version = "0.10.1", features = ["gnome_48", "libadwaita"] }
fuzzy-matcher = "0.3.7"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
dirs = "6.0"
